# criterion-bench-template

./: Cargo.toml  README.md  cargo-generate.toml
benches/: {{bench}}.rs
src/: main.rs
